// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="search-navigator-facet-header projects-facet-header"
>
  <h3
    className="h4"
  >
    foo
  </h3>
</div>
`;

exports[`renders with children 1`] = `
<div
  className="search-navigator-facet-header projects-facet-header"
>
  <h3
    className="h4"
  >
    foo
  </h3>
  <div />
</div>
`;
